Fixed mobile nav menu animation and readability

--- a/portfolio-site/src/Components/Main Styles/_colours.scss
+++ b/portfolio-site/src/Components/Main Styles/_colours.scss
@@ -2,6 +2,7 @@ $primary-colour: #333;
 $primary-hover-colour: #555;
 
 $primary-colour-glass: rgba(51, 51, 51, 0.75);
+$primary-colour-darker-glass: rgba(51, 51, 51, 0.85);
 $primary-hover-colour-glass: rgba(85, 85, 85, 0.75);
 $border-colour-glass: rgba(221, 221, 221, 0.5);
 
