--- a/portfolio-site/src/Components/Navbar/nav.scss
+++ b/portfolio-site/src/Components/Navbar/nav.scss
@@ -97,29 +97,34 @@ nav{
         top: 0;
 
         // Content alignment
-        display: none;
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
 
         // Appearance
-        background-color: $primary-colour-glass;
+        background-color: $primary-colour-darker-glass;
+        opacity: 0;
+        visibility: hidden;
 
         // Animation
         $animation-time: 500ms;
-        transition: opacity $animation-time ease-in-out, 
+        transition: opacity $animation-time ease-in-out,
                     visibility $animation-time ease-in-out;
 
         // Links
         & a{
             // Sizing
             width: 60%;
+            height: 7.5%;
+            margin: 5% 0;
         }
 
         // Buttons
         & button{
             // Sizing
             width: 100%;
+            height: 100%;
 
             // Positioning
             margin: 0 auto;
@@ -143,7 +148,8 @@ nav{
     &.show{
         & div#nav-links{
             // Show links
-            display: flex;
+            opacity: 1;
+            visibility: visible;
         }
 
         & label#nav-hamburger-wrapper{
@@ -189,6 +195,8 @@ nav{
 
             // Appearance
             background-color: transparent;
+            opacity: 1;
+            visibility: visible;
     
             // Positioning
             position: relative;
@@ -197,12 +205,17 @@ nav{
             & a{
                 // Sizing
                 width: 100%;
+                height: auto;
+
+                // Positioning
+                margin: auto;
             }
             
             // Buttons
             & button{
                 // Sizing
                 width: 100%;
+                height: auto;
 
                 // Positioning
                 position: relative;
